--- a/hello-world/pom.xml
+++ b/hello-world/pom.xml
@@ -17,6 +17,7 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <kumuluzee.version>4.1.0</kumuluzee.version>
+    <postgresql.version>42.5.0</postgresql.version>
   </properties>
 
   <dependencyManagement>
@@ -45,6 +46,11 @@
     <dependency>
         <groupId>com.kumuluz.ee</groupId>
         <artifactId>kumuluzee-servlet-jetty</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId> 
+        <version>${postgresql.version}</version>
     </dependency>
   </dependencies>
 
