Setting up local database

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,18 @@ jobs:
         with:
           java-version: ${{ matrix.version }}
           distribution: 'adopt'
+      - name: Setup local database
+        run: |
+          docker run -d --name postgres-jdbc -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=uporabniki -p 5432:5432 postgres:13
+          docker exec -it postgres-jdbc psql -U postgres -w postgres -c \
+           'CREATE TABLE public.uporabnik (
+              id serial NOT NULL,
+              ime varchar NULL,
+              priimek varchar NULL,
+              uporabniskoime varchar NULL,
+              CONSTRAINT uporabnik_pk PRIMARY KEY (id));'
+          docker exec -it postgres-jdbc psql -U postgres -w postgres -c \
+            "INSERT INTO uporabnik (ime, priimek, uporabniskoime) VALUES ('janez', 'novak', 'janezn')"
       - name: Build project with Maven
         run: mvn -f hello-world/pom.xml install -DskipTests
       - name: Run server locally
