--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
     services:
       postgres-jdbc:
         image: postgres:13
-        env:
+        environment:
           - POSTGRES_PASSWORD=postgres
           - POSTGRES_DB=uporabniki
         ports:
