--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,9 +21,9 @@ jobs:
     services:
       postgres-jdbc:
         image: postgres:13
-        environment:
-          - POSTGRES_PASSWORD=postgres
-          - POSTGRES_DB=uporabniki
+        env:
+          - POSTGRES_PASSWORD: postgres
+          - POSTGRES_DB: uporabniki
         ports:
           - 5432:5432
         # Set health checks to wait until postgres has started
