--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,8 +22,8 @@ jobs:
       postgres-jdbc:
         image: postgres:13
         env:
-          - POSTGRES_PASSWORD: postgres
-          - POSTGRES_DB: uporabniki
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: uporabniki
         ports:
           - 5432:5432
         # Set health checks to wait until postgres has started
