--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,8 +19,9 @@ jobs:
 
     # Setup local database
     services:
-      postgres-jdbc:
-        image: postgres:13
+      postgres:
+        name: postgres-jdbc
+        image: postgres:13 
         env:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: uporabniki
