--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
     # Setup local database
     services:
       postgres:
-        name: postgres-jdbc
+        container_name: postgres-jdbc
         image: postgres:13 
         env:
           POSTGRES_PASSWORD: postgres
