--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,6 @@ jobs:
     # Setup local database
     services:
       postgres:
-        container_name: postgres-jdbc
         image: postgres:13 
         env:
           POSTGRES_PASSWORD: postgres
@@ -33,6 +32,7 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+          --name postgres-jdbc
 
     # CI job
     steps:
