--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,14 +48,14 @@ jobs:
       - name: Setup local database
         run: |
           sudo apt-get install -y postgresql-client
-          psql -U postgres -w postgres -c \
+          psql -h 127.0.0.1 -U postgres -w postgres -c \
            'CREATE TABLE public.uporabnik (
               id serial NOT NULL,
               ime varchar NULL,
               priimek varchar NULL,
               uporabniskoime varchar NULL,
               CONSTRAINT uporabnik_pk PRIMARY KEY (id));'
-          psql -U postgres -w postgres -c \
+          psql -h 127.0.0.1 -U postgres -w postgres -c \
             "INSERT INTO uporabnik (ime, priimek, uporabniskoime) VALUES ('janez', 'novak', 'janezn')"
       - name: Build project with Maven
         run: mvn -f hello-world/pom.xml install -DskipTests
