Check all pushes not only on branches feature/**. Co-authored-by: nyanSpruk

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,8 @@ name: Build and test
 
 on: 
   push: 
-    branches: ["feature/*"]
+    paths-ignore:
+      - 'docs/**'
   pull_request:
     branches: ["main", "dev"]
 
