Hiding environment variables

--- a/hello-world/src/main/resources/config.yml
+++ b/hello-world/src/main/resources/config.yml
@@ -5,7 +5,7 @@ kumuluzee:
     name: dev
   datasources:
     - jndi-name: jdbc/SimpleJdbcDS
-      connection-url: jdbc:postgresql://localhost:5432/uporabniki
-      username: postgres
-      password: postgres
+      connection-url: ${DB_DRIVER}:${DB_TYPE}://${DB_HOST}:${DB_PORT}/${DB_NAME}
+      username: ${DB_USERNAME}
+      password: ${DB_PASSWORD}
       max-pool-size: 10
