--- a/hello-world/sample.env
+++ b/hello-world/sample.env
@@ -1,5 +1,7 @@
-DB_IP_ADDRESS=localhost
+DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=uporabniki
+DB_DRIVER=jdbc
+DB_TYPE=postgresql
 DB_PASSWORD=postgres
 DB_USERNAME=postgres
